# FitConnect2D

./: .gitignore  BUILD_VS2022.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
data/: 1.csv  2.csv  3.csv  4.csv  Cup0.txt  Keyboard0.txt  Monitor0.txt  Mouse0.txt
src/: Point.h  PrecTimer.cpp  PrecTimer.h  Reconstruct2D.cpp  Reconstruct2D.h  TestReconstruct2D.cpp  circle.h
